--- a/Persistencia/App.Config
+++ b/Persistencia/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TiendaDB" connectionString="metadata=res://*/Database.ModeloBD.csdl|res://*/Database.ModeloBD.ssdl|res://*/Database.ModeloBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7VFLBG2\SQLEXPRESS;initial catalog=BaseArticulos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TiendaDB" connectionString="metadata=res://*/Database.ModeloBD.csdl|res://*/Database.ModeloBD.ssdl|res://*/Database.ModeloBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-VMMMJ5J\SQLEXPRESS;initial catalog=BaseArticulos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
