Estructura de el sistema

--- a/Persistencia/Persistencia.csproj
+++ b/Persistencia/Persistencia.csproj
@@ -53,13 +53,40 @@
   <ItemGroup>
     <Compile Include="ADO.NET\AccesoBase.cs" />
     <Compile Include="ADO.NET\AccesoBaseArticulos.cs" />
+    <Compile Include="ADO.NET\AccesoBaseProyecto.cs" />
+    <Compile Include="ADO.NET\AccesoBaseUsuario.cs" />
     <Compile Include="ADO.NET\Constantes\LogAcciones.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaVideo.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaValoracion.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaUsuario.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaTexto.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaTagProyecto.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaTag.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaSigue.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaSeccion.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaProyecto.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaMensaje.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaImagen.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaComentario.cs" />
+    <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaCategoria.cs" />
     <Compile Include="ADO.NET\DataTrasnferObjects\DTOPersistenciaArticulo.cs" />
     <Compile Include="Database\Articulo.cs">
       <DependentUpon>ModeloBD.tt</DependentUpon>
     </Compile>
+    <Compile Include="Database\categoria.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\comentario.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\imagen.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
     <Compile Include="Database\LogArticulos.cs">
       <DependentUpon>ModeloBD.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\mensaje.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
     </Compile>
     <Compile Include="Database\ModeloBD.Context.cs">
       <AutoGen>True</AutoGen>
@@ -76,6 +103,51 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ModeloBD.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Database\ModeloDesignPro.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModeloDesignPro.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\ModeloDesignPro.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\ModeloDesignPro.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ModeloDesignPro.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Database\proyecto.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\seccion.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\sp_helpdiagrams_Result.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\sysdiagrams.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\tag.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\texto.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\usuario.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\valoracion.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\video.cs">
+      <DependentUpon>ModeloDesignPro.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +161,13 @@
     <None Include="Database\ModeloBD.edmx.diagram">
       <DependentUpon>ModeloBD.edmx</DependentUpon>
     </None>
+    <EntityDeploy Include="Database\ModeloDesignPro.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ModeloDesignPro.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Database\ModeloDesignPro.edmx.diagram">
+      <DependentUpon>ModeloDesignPro.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -101,6 +180,16 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>ModeloBD.edmx</DependentUpon>
       <LastGenOutput>ModeloBD.cs</LastGenOutput>
+    </Content>
+    <Content Include="Database\ModeloDesignPro.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ModeloDesignPro.edmx</DependentUpon>
+      <LastGenOutput>ModeloDesignPro.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Database\ModeloDesignPro.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ModeloDesignPro.edmx</DependentUpon>
+      <LastGenOutput>ModeloDesignPro.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
