--- a/InternalServices/Web.config
+++ b/InternalServices/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="BdArticulos" connectionString="Initial Catalog=BaseArticulos;Data Source=DESKTOP-VMMMJ5J\SQLEXPRESS;Integrated Security=true" />
-    <add name="TiendaDB" connectionString="metadata=res://*/Database.ModeloBD.csdl|res://*/Database.ModeloBD.ssdl|res://*/Database.ModeloBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-VMMMJ5J\SQLEXPRESS;initial catalog=BaseArticulos;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BdArticulos" connectionString="Initial Catalog=designPro;Data Source=SCN-PC\SQLEXPRESS01;Integrated Security=true" />
+	<add name="TiendaDB" connectionString="metadata=res://*/Database.ModeloBD.csdl|res://*/Database.ModeloBD.ssdl|res://*/Database.ModeloBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SCN-PC\SQLEXPRESS01;initial catalog=designPro;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
   </appSettings>
