--- a/TiendaShop/TiendaShop.csproj
+++ b/TiendaShop/TiendaShop.csproj
@@ -125,16 +125,25 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ProyectoController.cs" />
+    <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Controllers\ArticuloController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ManejadorProyecto.cs" />
+    <Compile Include="Models\ManejadorUsuario.cs" />
+    <Compile Include="Models\Sigue.cs" />
+    <Compile Include="Models\Imagen.cs" />
     <Compile Include="Models\Categoria.cs" />
     <Compile Include="Models\Comentario.cs" />
     <Compile Include="Models\Mensaje.cs" />
     <Compile Include="Models\Proyecto.cs" />
     <Compile Include="Models\Seccion.cs" />
+    <Compile Include="Models\Video.cs" />
+    <Compile Include="Models\Texto.cs" />
+    <Compile Include="Models\TagProyecto.cs" />
     <Compile Include="Models\Valoracion.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Models\Tag.cs" />
@@ -142,6 +151,8 @@
     <Compile Include="Models\ManejadorArticulo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiService.cs" />
+    <Compile Include="Services\ProyectoServices.cs" />
+    <Compile Include="Services\UsuarioServices.cs" />
     <Compile Include="Services\ArticuloServices.cs" />
   </ItemGroup>
   <ItemGroup>
