--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -49,17 +49,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataModel\DbConstants\LogActionsDb.cs" />
+    <Compile Include="DataModel\Repositories\MensajeRepository.cs" />
     <Compile Include="DataModel\Repositories\ProyectoRepository.cs" />
     <Compile Include="DataModel\Repositories\UsuarioRepository.cs" />
     <Compile Include="DataModel\UnitOfWork.cs" />
+    <Compile Include="General\MantenimientoMensaje.cs" />
     <Compile Include="General\MantenimientoProyecto.cs" />
     <Compile Include="General\MantenimientoUsuario.cs" />
+    <Compile Include="Mappers\MensajeMapper.cs" />
     <Compile Include="Mappers\ProyectoMapper.cs" />
     <Compile Include="Mappers\UsuarioMapper.cs" />
-    <Compile Include="Mappers\ArticuloMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DataModel\Repositories\ArticuloRepository.cs" />
-    <Compile Include="General\MantenimientoArticulo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
