--- a/TiendaShop/TiendaShop.csproj
+++ b/TiendaShop/TiendaShop.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Models\ManejadorArticulo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ApiService.cs" />
+    <Compile Include="Services\MensajeServices.cs" />
     <Compile Include="Services\ProyectoServices.cs" />
     <Compile Include="Services\UsuarioServices.cs" />
   </ItemGroup>
