--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -51,18 +51,22 @@
     <Compile Include="DataModel\DbConstants\LogActionsDb.cs" />
     <Compile Include="DataModel\Repositories\ComentarioRepository.cs" />
     <Compile Include="DataModel\Repositories\MensajeRepository.cs" />
+    <Compile Include="DataModel\Repositories\CategoriaRepository.cs" />
+    <Compile Include="DataModel\Repositories\SeccionRepository.cs" />
+    <Compile Include="DataModel\Repositories\ValoracionRepository.cs" />
     <Compile Include="DataModel\Repositories\ProyectoRepository.cs" />
     <Compile Include="DataModel\Repositories\UsuarioRepository.cs" />
     <Compile Include="DataModel\UnitOfWork.cs" />
     <Compile Include="General\MantenimientoComentario.cs" />
     <Compile Include="General\MantenimientoMensaje.cs" />
     <Compile Include="General\MantenimientoProyecto.cs" />
+    <Compile Include="General\MantenimientoSeccion.cs" />
     <Compile Include="General\MantenimientoUsuario.cs" />
+    <Compile Include="Mappers\TagMapper.cs" />
     <Compile Include="Mappers\ComentarioMapper.cs" />
     <Compile Include="Mappers\MensajeMapper.cs" />
-    <Compile Include="Mappers\TextoMapper.cs" />
-    <Compile Include="Mappers\ImagenMapper.cs" />
-    <Compile Include="Mappers\VideoMapper.cs" />
+    <Compile Include="Mappers\CategoriaMapper.cs" />
+    <Compile Include="Mappers\ValoracionMapper.cs" />
     <Compile Include="Mappers\SeccionMapper.cs" />
     <Compile Include="Mappers\ProyectoMapper.cs" />
     <Compile Include="Mappers\UsuarioMapper.cs" />
