--- a/TiendaShop/Web.config
+++ b/TiendaShop/Web.config
@@ -13,7 +13,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="TIENDASHOP.ENDPOINT.INTERNAL" value="https://localhost:44360/api/" />
+    <add key="DESIGNPRO.ENDPOINT.INTERNAL" value="https://localhost:44378/api/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
